web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-function-declaration/output.txt
[SyntaxError]: Identifier has already been declared. (2,8)
2|export function foo() {};
 |      ^
